# apkx

./: CMakeLists.txt  install.sh
include/apkx/: android_framework.hpp  bionic_darwin.hpp  cli.hpp  dex_interpreter.hpp  dex_loader.hpp  elf_loader.hpp  fetch.hpp  gles_egl.hpp  graphics_metal.hpp  install.hpp  jni_bridge.hpp  paths.hpp  registry.hpp  run.hpp  runtime.hpp  syscall_hook.hpp  system_services.hpp  vm.hpp
src/: android_ui_renderer.mm  app_execution.cpp  bionic_darwin.cpp  cli.cpp  dex_executor.cpp  dex_interpreter.cpp  dex_loader.cpp  elf_loader.cpp  fetch.cpp  graphics_cocoa.mm  graphics_metal.cpp  install.cpp  jni_bridge.cpp  main.cpp  native_executor.cpp  paths.cpp  real_dex_executor.cpp  registry.cpp  run.cpp  runtime.cpp  syscall_hook.cpp  system_services.cpp  vm.cpp
